--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -22,7 +22,7 @@
 .navbar {
   background-color: #a4e333;
   height: 80px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
   border-radius: 8px; 
 }
 
@@ -56,11 +56,11 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   width: 83px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .registration-button:hover {
@@ -76,11 +76,11 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   width: 83px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .login-button:hover {
@@ -96,11 +96,11 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   width: 83px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .logout-button:hover{
@@ -116,11 +116,11 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   width: 83px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .demo-button:hover{
@@ -215,10 +215,10 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .login-button:hover {
@@ -235,10 +235,10 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .login-close-button:hover {
@@ -297,10 +297,10 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .registration-submit-button:hover {
@@ -316,10 +316,10 @@
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .registration-close-button:hover {
@@ -357,10 +357,11 @@ a {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   width: 83px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 .choose-file:hover {
   background-color: #228B22;
@@ -376,10 +377,10 @@ input[type="file"] {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 .classify-button:hover {
   background-color: #228B22;
@@ -411,10 +412,10 @@ input[type="file"] {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .outfit-remove-button:hover {
@@ -427,14 +428,19 @@ input[type="file"] {
   flex-direction: row;
 }
 
-.item {
+.outfit-item {
   width: 120px;
   height: 180px;
   margin: 10px;
   padding: 10px;
+  border-radius: 14px;
   background-color: #f9f9f9;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
+}
+
+.outfit-item:hover {
+  transform: translateY(-5px);
 }
 
 .empty-message {
@@ -469,7 +475,7 @@ input[type="file"] {
 
 button {
   margin-top: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 /* ClosetView Component */
@@ -478,6 +484,7 @@ button {
   position: sticky;
   top: 0;
   z-index: 1; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
 }
 
 .closet-view {
@@ -541,9 +548,11 @@ button {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 6px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+
 }
 
 .category-button:hover {
@@ -559,9 +568,10 @@ button {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .delete-button:hover {
@@ -577,9 +587,10 @@ button {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .edit-button:hover {
@@ -609,9 +620,10 @@ button {
   background-color: #50C878;
   color: black;
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .select-button:hover {
