--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -329,9 +329,28 @@
 
 /* Image Uploader Component */
 
-.upload-container {
-  display: inline-block;
+.upload-component-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.upload-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 500px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fbfbfb;
+}
+
 h3 {
   margin: 40px 0 0;
 }
@@ -346,14 +365,14 @@ a {
   color: #42b983;
 }
 .upload-title {
-  margin-left: 10px;
-  margin-top: 15px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 .choose-file {
   margin: 5px;
   font-size: 14px;
   margin-top: 10px;
-  padding: 5px 10px;
+  padding: 5px 16px;
   background-color: #50C878;
   color: black;
   border: 1px solid black;
@@ -373,7 +392,7 @@ input[type="file"] {
 .classify-button {
   margin: 5px;
   margin-top: 10px;
-  padding: 5px 10px;
+  padding: 5px 16px;
   background-color: #50C878;
   color: black;
   border: 1px solid black;
