--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -671,8 +671,8 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  max-height: 400px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
 }
@@ -682,7 +682,13 @@ button {
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  width: 400px;
+}
+
+.image-modal-image {
+  height: 400px;
+  width: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .image-header {
