--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -669,8 +669,10 @@ button {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   width: auto;
   max-height: 400px;
   background-color: rgba(0, 0, 0, 0.5);
