--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -668,9 +668,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
   left: 50%;
-  top: 50%;
+  top: 75%;
   transform: translate(-50%, -50%);
   width: auto;
   max-height: 400px;
