--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -664,16 +664,23 @@ button {
 
 /* Image Modal */
 
-.image-modal {
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  width: 100px;
-  max-height: 200px;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 999; 
+}
+
+.image-modal {
+  background-color: #f9f9f9;
+  padding: 20px;  
+  background-color: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .image-modal-content {
@@ -684,7 +691,7 @@ button {
 }
 
 .image-modal-image {
-  height: 200px;
+  height: 250px;
   width: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
