--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -560,6 +560,8 @@ button {
   width: auto;
   height: 325px;
   z-index: 0;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); 
 }
 
 .card-info {
@@ -737,4 +739,38 @@ button {
 .image-close-button:hover {
   background-color: #228B22;
   color: black;
+}
+
+/* SlideUpTab */
+
+.slide-up-tab {
+  position: fixed;
+  bottom: 0px; 
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  transition: transform 0.3s ease-in-out;
+  z-index: 999; 
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  transform: translateY(93%);
+}
+
+.tab-button {
+  width: 100%;
+  padding: 10px;
+  background-color: #50C878;
+  color: black;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
+.tab-content {
+  padding: 20px;
+}
+
+.slide-up-tab.open {
+  transform: translateY(45%); 
 }
