--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -324,7 +324,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
+  margin-top: .5px;
 }
 
 .upload-container {
@@ -405,6 +405,60 @@ input[type="file"] {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.preview-modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; 
+}
+
+.preview-image-modal {
+  background-color: #f9f9f9;
+  padding: 20px;  
+  background-color: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.preview-image-modal-content {
+  background-color: #f9f9f9;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.preview-image-modal-image {
+  height: 250px;
+  width: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.preview-image-close-button {
+  display: block;
+  margin: 5px;
+  width: 83px;
+  margin-top: 0px;
+  padding: 5px 10px;
+  background-color: #50C878;
+  color: black;
+  border: 1px solid black;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+}
+
+.preview-image-close-button:hover {
+  background-color: #228B22;
+  color: black;
+}
+
 
 /* Outfit View Component */
 
